--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,10 +77,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Inter Black
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Black.ttf
+    - family: Inter Bold 18
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Bold.ttf
+    - family: Inter Black
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Black.ttf
+    - family: Inter Italic
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Italic.ttf
+    - family: Inter Regular
+      fonts:
+        - asset: assets/fonts/Inter_18pt-Regular.ttf
+    - family: Inter Bold 24
+      fonts:
+        - asset: assets/fonts/Inter_24pt-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
