--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.1.1
-
+  lottie: ^3.1.0
   intl_phone_field: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +64,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/lottie/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
